--- a/3waimslp/templates/home/index.html.twig
+++ b/3waimslp/templates/home/index.html.twig
@@ -28,13 +28,13 @@
 
     <div class=" row">
         <div class="sidebarHome mr-4 block">
-
+            {% if app.user %}
                 <p class="mt-5"><a class="text-decoration-none text-white  ms-2" href="">Favoris <i class="fas fa-heart fa-lg"></i></a></p>
-{#            {% if app.user %}#}
-{#            <a  class="text-decoration-none text-white" href="{{ path('logout') }}">Se Deconnecter</a>#}
-{#            {% else %}#}
-                <a  class="text-decoration-none text-white ms-2" href="">Se Connecter</a>
-{#            {% endif %}#}
+
+            <a  class="text-decoration-none text-white" href="{{ path('app_logout') }}">Se Déconnecter</a>
+            {% else %}
+                <a  class="text-decoration-none text-white ms-2" href="{{ path('app_login') }}">Se Connecter</a>
+            {% endif %}
         </div>
 
         <div class="contentMainSearch column">
@@ -51,10 +51,5 @@
                 {% include 'home/searchResults.html.twig' %}
             </div>
 
-
-
-
     </div>
-
-
 {% endblock %}
