--- a/3waimslp/templates/security/login.html.twig
+++ b/3waimslp/templates/security/login.html.twig
@@ -13,30 +13,44 @@
             You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
         </div>
     {% endif %}
-
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
-
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
-
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
+    <div class="containerLogin mt-5 m-auto">
+        <div class="seConnecter">
+            <h1 class="h5 mb-3 font-weight-normal text-white text-center">Se connecter</h1>
         </div>
-    #}
+        <div class="m-auto w-50 mt-5">
+            <label for="inputEmail">Email</label>
+            <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+            <label for="inputPassword">Password</label>
+            <input type="password" name="password" id="inputPassword" class="form-control " autocomplete="current-password" required>
+        </div>
 
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
-    </button>
+        <input type="hidden" name="_csrf_token"
+               value="{{ csrf_token('authenticate') }}"
+        >
+
+
+
+        {#
+            Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+            See https://symfony.com/doc/current/security/remember_me.html
+
+            <div class="checkbox mb-3">
+                <label>
+                    <input type="checkbox" name="_remember_me"> Remember me
+                </label>
+            </div>
+        #}
+        <div class="text-center p-4">
+            <button class=" btnConnecter btn-md mt-2" type="submit">
+               Se connecter
+            </button>
+
+            <div class="creerCompte column">
+                <p class="m-0">ou</p>
+                <a class="text-black-50 ms-2" href="{{ path('app_register') }}">Créer un compte</a>
+            </div>
+        </div>
+
+    </div>
 </form>
 {% endblock %}
