--- a/3waimslp/templates/home/index.html.twig
+++ b/3waimslp/templates/home/index.html.twig
@@ -31,7 +31,7 @@
             {% if app.user %}
                 <p class="mt-5"><a class="text-decoration-none text-white  ms-2" href="">Favoris <i class="fas fa-heart fa-lg"></i></a></p>
 
-            <a  class="text-decoration-none text-white" href="{{ path('app_logout') }}">Se Déconnecter</a>
+            <a  class="text-decoration-none text-white ms-2" href="{{ path('app_logout') }}">Se Déconnecter</a>
             {% else %}
                 <a  class="text-decoration-none text-white ms-2" href="{{ path('app_login') }}">Se Connecter</a>
             {% endif %}
