--- a/3waimslp/templates/search/results.html.twig
+++ b/3waimslp/templates/search/results.html.twig
@@ -9,9 +9,13 @@
             {% for data in datas %}
                 {% for key, row in data %}
                     {% if(row.type == 1) %}
-                        <li class="list-group-item d-flex justify-content-between">{{ row.id |slice(9, row.id|length) }}<a class="btn btn-primary">Ajouter aux favoris</a></li>
+                        <li class="list-group-item d-flex justify-content-between" id="{{ key }}" style="cursor: default">{{ row.id |slice(9, row.id|length) }}
+                            <a class="btn btn-primary" href="{{ path("app_search_favorite", {'id' :  key, 'type' : row.type }) }}">Ajouter aux favoris</a>
+                        </li>
                     {% else %}
-                        <li class="list-group-item d-flex justify-content-between" id="{{ key }}">{{ row.intvals.worktitle ~ " (" ~ row.intvals.composer ~ ")" }}<a class="btn btn-primary">Ajouter aux favoris</a></li>
+                        <li class="list-group-item d-flex justify-content-between" id="{{ key }}" style="cursor: default">{{ row.intvals.worktitle ~ " (" ~ row.intvals.composer ~ ")" }}
+                            <a class="btn btn-primary" href="{{ path("app_search_favorite", {'id' :  key, 'type' : row.type }) }}">Ajouter aux favoris</a>
+                        </li>
                     {% endif %}
                 {% endfor %}
             {% endfor %}
