[FIX] : login target + responsive page Detail + fix js

--- a/3waimslp/templates/registration/register.html.twig
+++ b/3waimslp/templates/registration/register.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-<div class="containerLogin mt-5 m-auto">
+<div class="containerRegister mt-5 m-auto">
     <div class="seConnecter">
         <h1 class="h5 mb-3 font-weight-normal text-white text-center">Register</h1>
     </div>
