--- a/3waimslp/templates/detail/index.html.twig
+++ b/3waimslp/templates/detail/index.html.twig
@@ -19,28 +19,35 @@
 </div>
 
 <div class="menuResponsiveDetails d-none">
-    <p class=""><a class="text-decoration-none text-white  ms-2" href="">Favoris <i class="fas fa-heart fa-lg"></i></a></p>
-    {#            {% if app.user %}#}
-    {#            <a  class="text-decoration-none text-white" href="{{ path('logout') }}">Se Deconnecter</a>#}
-    {#            {% else %}#}
-    <a  class="text-decoration-none text-white ms-2" href="">Se Connecter</a>
-    {#            {% endif %}#}
-</div>
+    <div class="mt-3">
+        <p class="mb-2"><a class="text-decoration-none text-white ms-2 mb-2" href="{{ path('app_home') }}">Accueil</a></p>
 
-<div class=" row">
-    <div class="sidebarDetails mr-4 block">
         {% if app.user %}
-            <p class="mt-5"><a class="text-decoration-none text-white  ms-2" href="">Favoris <i class="fas fa-heart fa-lg"></i></a></p>
-
+            <p class="mb-2"><a class="text-decoration-none text-white  ms-2" href="">Favoris <i class="fas fa-heart fa-lg"></i></a></p>
             <a  class="text-decoration-none text-white ms-2" href="{{ path('app_logout') }}">Se Déconnecter</a>
         {% else %}
             <a  class="text-decoration-none text-white ms-2" href="{{ path('app_login') }}">Se Connecter</a>
         {% endif %}
     </div>
+</div>
+
+<div class=" row">
+    <div class="sidebarDetails mr-4 block">
+        <div class="mt-3">
+            <p class="mb-2"><a class="text-decoration-none text-white ms-2 mb-2" href="{{ path('app_home') }}">Accueil</a></p>
+
+            {% if app.user %}
+            <p class="mb-2"><a class="text-decoration-none text-white  ms-2" href="">Favoris <i class="fas fa-heart fa-lg"></i></a></p>
+            <a  class="text-decoration-none text-white ms-2" href="{{ path('app_logout') }}">Se Déconnecter</a>
+        {% else %}
+            <a  class="text-decoration-none text-white ms-2" href="{{ path('app_login') }}">Se Connecter</a>
+        {% endif %}
+        </div>
+    </div>
 
     <div class="contentDetails mt-5">
         <div class="m-auto">
-            <div class="column flex-md-row">
+            <div class="containerCard row">
                 <img class="col-md-3 col-8"  src="{{ asset("assets/files/mozart.jpg") }}">
 
                 <div class="column col-md-9">
