--- a/3waimslp/templates/home/index.html.twig
+++ b/3waimslp/templates/home/index.html.twig
@@ -18,23 +18,30 @@
     </div>
 
 <div class="menuResponsive d-none">
-    <p class=""><a class="text-decoration-none text-white  ms-2" href="">Favoris <i class="fas fa-heart fa-lg"></i></a></p>
-    {#            {% if app.user %}#}
-    {#            <a  class="text-decoration-none text-white" href="{{ path('logout') }}">Se Deconnecter</a>#}
-    {#            {% else %}#}
-    <a  class="text-decoration-none text-white ms-2" href="">Se Connecter</a>
-    {#            {% endif %}#}
+    <div class="mt-3 column">
+        {% if app.user %}
+            <p class="mb-2"><a class="text-decoration-none text-white ms-2 mb-2" href="{{ path('app_home') }}">Accueil</a></p>
+            <p class="mb-2"><a class="text-decoration-none text-white  ms-2" href="">Favoris <i class="fas fa-heart fa-lg"></i></a></p>
+            <a  class="text-decoration-none text-white ms-2" href="{{ path('app_logout') }}">Se Déconnecter</a>
+        {% else %}
+            <a  class="text-decoration-none text-white ms-2" href="{{ path('app_login') }}">Se Connecter</a>
+        {% endif %}
+    </div>
 </div>
 
     <div class=" row">
         <div class="sidebarHome mr-4 block">
+            <div class="mt-3 column">
+            <p><a  class="text-decoration-none mt-4 ms-2 text-white" href="{{ path('app_home') }}">Accueil</a></p>
 
-                <p class="mt-5"><a class="text-decoration-none text-white  ms-2" href="">Favoris <i class="fas fa-heart fa-lg"></i></a></p>
-{#            {% if app.user %}#}
-{#            <a  class="text-decoration-none text-white" href="{{ path('logout') }}">Se Deconnecter</a>#}
-{#            {% else %}#}
+            {% if app.user %}
+            <p class="mt-2 mb-2"><a class="text-decoration-none text-white  ms-2" href="">Favoris <i class="fas fa-heart fa-lg"></i></a></p>
+
+            <a  class="text-decoration-none text-white ms-2" href="{{ path('app_logout') }}">Se Déconnecter</a>
+            {% else %}
                 <a  class="text-decoration-none text-white ms-2" href="{{ path('app_login') }}">Se Connecter</a>
-{#            {% endif %}#}
+            {% endif %}
+            </div>
         </div>
 
         <div class="contentMainSearch column">
