--- a/3waimslp/public/assets/styles/home.css
+++ b/3waimslp/public/assets/styles/home.css
@@ -34,8 +34,12 @@ h2 {
     box-shadow: rgba(99, 99, 99, 0.2) 0 2px 8px 0;
 }
 
-.fontBold {
-    font-weight: bold;
+.textRed {
+    color: #ed3d3d;
+}
+
+.heartWithoutFont {
+    font-weight: unset !important;
 }
 
 .contentMainSearch {
