--- a/3waimslp/templates/home/index.html.twig
+++ b/3waimslp/templates/home/index.html.twig
@@ -29,7 +29,7 @@
     <div class=" row">
         <div class="sidebarHome mr-4 block">
 
-                <p class="mt-5"><a class="text-decoration-none text-white  ms-2" href="">Favoris <i class="fas fa-heart fa-lg"></i></a></p>
+                <p class="mt-5"><a class="text-decoration-none text-white  ms-2" href="{{ path("app_favorites") }}">Favoris <i class="fas fa-heart fa-lg"></i></a></p>
 {#            {% if app.user %}#}
 {#            <a  class="text-decoration-none text-white" href="{{ path('logout') }}">Se Deconnecter</a>#}
 {#            {% else %}#}
