--- a/3waimslp/public/assets/styles/login.css
+++ b/3waimslp/public/assets/styles/login.css
@@ -36,4 +36,18 @@
     flex-direction: column;
 }
 
+@media screen and (max-width: 768px) {
+    .containerLogin {
+        width: 100%;
+        height: 500px;
+
+    }
+
+    .containerRegister {
+        box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0, rgba(27, 31, 35, 0.15) 0 0 0 1px;
+        width: 100%;
+        height: 548px;
+    }
+}
+
 
