--- a/3waimslp/templates/home/index.html.twig
+++ b/3waimslp/templates/home/index.html.twig
@@ -21,7 +21,7 @@
     <div class="mt-3 column">
         <p class="mb-2"><a class="text-decoration-none text-white ms-2 mb-2" href="{{ path('app_home') }}">Accueil</a></p>
         {% if app.user %}
-            <p class="mb-2"><a class="text-decoration-none text-white  ms-2" href="">Favoris <i class="fas fa-heart fa-lg"></i></a></p>
+            <p class="mb-2"><a class="text-decoration-none text-white  ms-2" href="'{{ path('app_favorites') }}">Favoris <i class="fas fa-heart fa-lg"></i></a></p>
             <a  class="text-decoration-none text-white ms-2" href="{{ path('app_logout') }}">Se Déconnecter</a>
         {% else %}
             <a  class="text-decoration-none text-white ms-2" href="{{ path('app_login') }}">Se Connecter</a>
@@ -35,7 +35,7 @@
             <p><a  class="text-decoration-none mt-4 ms-2 text-white" href="{{ path('app_home') }}">Accueil</a></p>
 
             {% if app.user %}
-            <p class="mt-2 mb-2"><a class="text-decoration-none text-white  ms-2" href="">Favoris <i class="fas fa-heart fa-lg"></i></a></p>
+            <p class="mt-2 mb-2"><a class="text-decoration-none text-white  ms-2" href="{{ path('app_favorites') }}">Favoris <i class="fas fa-heart fa-lg"></i></a></p>
 
             <a  class="text-decoration-none text-white ms-2" href="{{ path('app_logout') }}">Se Déconnecter</a>
             {% else %}
